--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,69 @@
 body{
-    font-family: sans-serif;
-    background-color: #b5f3f6ff;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    
+}
+header{
+    text-align: center;
+}
+
+
+section{
+    display: flex;
+    flex-direction: row;
+    
+}
+
+article{
+    justify-content:end;
+    align-items: center;  
+    width: auto;
+    margin: auto;
+    height: 500px;
+    padding: 40px;
+    background-color: #FFEFFF;
+    border: 60px solid #CDB4DB;
+    border-radius: 40px;
+    box-shadow: 2px 2px 10px 2px gray;
+    
+}
+
+#instrucciones{
+    
+}
+
+#texto-inicial{
+    text-align: center;
+}
+
+input{
+    -webkit-appearance: none;
+    border-radius: 10px;
+    background-color: #E7DCE7;
+
+}
+
+
+
+.btn{
+    border: 2px solid #CCBBCC;
+    padding: 10px 20px;
+    background-color: #CCBBCC;
+    border-radius: 30px;
+    font-weight: 800;
+    color: white
+    
+    
+}
+.btn:hover{
+    color: black;
+    background-color: transparent;
+}
+
+#texto-final{
+    text-align: center;
+}
+
+
+footer{
+    text-align: center;
 }
