--- a/src/style.css
+++ b/src/style.css
@@ -27,8 +27,9 @@ article{
     
 }
 
-#instrucciones{
-    
+#mensaje{
+    font-size: 16px;
+    text-align: center;
 }
 
 #texto-inicial{
@@ -61,6 +62,10 @@ input{
     text-align: center;
 }
 
+#resultado{
+    font-size: 16px;
+    text-align: center;
+}
 
 footer{
     text-align: center;
